# AI-INITIATIVE

./: .gitignore  CLAUDE.md  README.md  app.py  fetch_cases.py  general_standards_filter.py  generate_endpoints.py  main.py  pyproject.toml  requirements-web.md  testcases_with_standards.csv
data/: Checker.csv  GRCX-web.csv
database/: __init__.py  db.py
db/: tc_analyzer.db
endpoints/: GRCX-web-endpoint.csv
pipeline/: __init__.py  field_maps.json  filter.py  loader.py
testrail/: __init__.py  client.py  endpoints.py
validation/: __init__.py  validator.py
